Popup dark mode span fix;

--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -271,6 +271,10 @@ html.dark-mode {
 
     & button.primary-colour {
       color: var(--color-on);
+
+      & > * {
+        color: var(--color-on);
+      }
     }
 
     &:after {
